--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,17 @@
   background-size: cover;
 }
 
+.cont1{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 3fr;
+}
+
+.inpt {
+  grid-row-start: 2;
+   grid-row-end: 4;
+      grid-column-start: 1;
+
+   grid-column-end: 3;
+   //justify-self:  center;
+}
