--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,19 @@ body {
   background-color: #EAAC8B ;
 }
 
+.poscent {
+  
+  left: 0; 
+  right: 0; 
+  top: 0; 
+  bottom: 0; 
+  margin-top: auto; 
+  margin-bottom: auto; 
+  width: 23%;
+  height: 33%;
+
+}
+
 body {
   background-image: url('./Signinpage/Components/Background/image.jpg');
   background-size: cover;
