--- a/src/Taskpage/Leftside/Components/Searchtask/Searchtask.css
+++ b/src/Taskpage/Leftside/Components/Searchtask/Searchtask.css
@@ -1,4 +1,10 @@
-.c {overflow-y: scroll;
+.c {overflow-y: auto;
 	z-index: 100;
 	max-height: 150px;
 }
+
+.cx {overflow-y: auto;
+	max-height: 70vh;
+	scrollbar-width: auto;
+}
+
