--- a/src/Taskpage/Taskpage.css
+++ b/src/Taskpage/Taskpage.css
@@ -6,12 +6,19 @@ body {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   gap: 20px;
+  background-image: url(./Leftside/bcg.svg)
 }
 
 .container3 {
   display: grid;
   grid-template-columns:1fr;
 }
+.dd{
+  background-color: #81f0ff;
+}
 
+.aa{
+  background-color: rgba(234, 236, 74, 0.637);
+}
 
 
