--- a/src/Taskpage/Leftside/Components/Searchtask/Searchtask.css
+++ b/src/Taskpage/Leftside/Components/Searchtask/Searchtask.css
@@ -4,7 +4,18 @@
 }
 
 .cx {overflow-y: auto;
-	max-height: 70vh;
+	max-height: 64vh;
 	scrollbar-width: auto;
 }
 
+.ffff{
+	max-height: 100vh;
+}
+
+.dddd{
+	height: 20vh;
+}
+
+.ddd{
+	height: 60vh;
+}
