--- a/src/Taskpage/Leftside/Components/Searchtask/Searchtask.css
+++ b/src/Taskpage/Leftside/Components/Searchtask/Searchtask.css
@@ -7,10 +7,10 @@
 	height: 64vh;
 }
 .nosaukums{
-	height: 8vh;
+	height: 100px;
 }
 .scroll2{
-	height: 56vh;
+	height: 53.5vh;
 	overflow-y: hidden;
 }
 .cx {
